fini c demain bye

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     Moi c’est Shanaël ARZOUAN, jeune étudiante de 20 ans en deuxième année de BTS SIO option SLAM.
                   </p>
                   <p class="lead">
-                    Mon projet professionnel est de devenir Webdesigner , après mes 2 ans d’études en BTS SIO, je compte ensuite faire un Bachelor : Chef de projet digital et design web.
+                    Mon projet professionnel est de devenir Webdesigner, après mes 2 ans d’études en BTS SIO, je compte ensuite faire un Bachelor : Chef de projet digital et design web.
                   </p>
                   <p class="lead">
                   </p>
@@ -126,6 +126,61 @@
       </div>
     </div>
   </section>
+  <!--/ Section Services End /-->
+  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
+    <div class="overlay-mf"></div>
+    <h2 class="timeline-title"> Expèriences</h2>
+    <ol class="timeline-list">
+      <li class="timeline-li">
+        <p class="diplome">LILDVD</p>
+          <span class="point"></span>
+        <p class="description">Prépare et réalise des animations en se donnant les moyens nécessaires à la réalisation. Propose et adapte les animations aux enfants.</p></li>
+      <li class="timeline-li">
+      <p class="diplome">Beyahad</p>
+        <span class="point"></span>
+        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyens nécessaires à la réalisation des projets. </p>
+      </li>
+       <li class="timeline-li">
+        <p class="diplome">Ioral</p>
+        <span class="point"></span>
+        <p class="description">Maintenance de site, Création de site, Elaboration de cahier des charges et du MCD (Modèle Conceptuel des Données)</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">La Mairie</p>
+        <span class="point"></span>
+        <p class="description">Excellente communication aussi bien avec les clients qu'en interne. Reception de courrier et son classement</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">Pardess</p>
+        <span class="point"></span>
+        <p class="description">
+          Maintenance du site, Gestion du stock. Creation app mobile
+        </p>
+      </li>
+    </ol>
+    <h2 class="timeline-title"> Formations</h2>
+    <ol class="timeline-list">
+      <li class="timeline-li">
+        <p class="diplome">Bac S</p>
+        <span class="point"></span>
+        <p class="description">Option mathematiques appliquées</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">Premiers secours</p>
+          <span class="point"></span>
+        <p class="description">Formation</p>
+      </li>
+       
+      <li class="timeline-li">
+        <p class="diplome">BTS SIO</p>
+        <span class="point"></span>
+        <p class="description">
+          Option Slam
+        </p>
+      </li>
+    </ol>
+    </div>
+  </div>
 
   <!--/ Section Services Star /-->
   <section id="service" class="services-mf route">
@@ -191,122 +246,6 @@
       </div>
     </div>
   </section>
-  <!--/ Section Services End /-->
-  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
-    <div class="overlay-mf"></div>
-    <h2 class="timeline-title"> Expèriences</h2>
-    <ol class="timeline-list">
-      <li class="timeline-li">
-        <p class="diplome">LILDVD</p>
-          <span class="point"></span>
-        <p class="description">Prépare et réalise des animations en se donnant les moyens nécessaires à la réalisation. Propose et adapte les animations aux enfants.</p></li>
-      <li class="timeline-li">
-      <p class="diplome">Beyahad</p>
-        <span class="point"></span>
-        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyens nécessaires à la réalisation des projets. </p>
-      </li>
-       <li class="timeline-li">
-        <p class="diplome">Ioral</p>
-        <span class="point"></span>
-        <p class="description">Maintenance de site, Création de site, Elaboration de cahier des charges et du MCD (Modèle Conceptuel des Données)</p>
-      </li>
-      <li class="timeline-li">
-        <p class="diplome">La Mairie</p>
-        <span class="point"></span>
-        <p class="description">Excellente communication aussi bien avec les clients qu'en interne. Reception de courrier et son classement</p>
-      </li>
-      <li class="timeline-li">
-        <p class="diplome">Pardess</p>
-        <span class="point"></span>
-        <p class="description">
-          Maintenance du site, Gestion du stock. Creation app mobile
-        </p>
-      </li>
-    </ol>
-    <h2 class="timeline-title"> Formations</h2>
-    <ol class="timeline-list">
-      <li class="timeline-li">
-        <p class="diplome">Bac S</p>
-        <span class="point"></span>
-        <p class="description">Option mathematiques appliquées</p>
-      </li>
-      <li class="timeline-li">
-        <p class="diplome">Premiers secours</p>
-          <span class="point"></span>
-        <p class="description">Formation</p>
-      </li>
-       
-      <li class="timeline-li">
-        <p class="diplome">BTS SIO</p>
-        <span class="point"></span>
-        <p class="description">
-          Option Slam
-        </p>
-      </li>
-    </ol>
-    </div>
-  </div>
-<!--/ Section Blog Star /-->
-  <section id="blog" class="blog-mf sect-pt4 route">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="title-box text-center">
-            <h3 class="title-a">
-              Experiences
-            </h3>
-            <p class="subtitle-a">
-              Vous trouverez ci-joint les missions effectuées durant mon stage ainsi que celles de mon alternace.
-            </p>
-            <div class="line-mf"></div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="card card-blog">
-            <div class="card-img">
-              <a href="iloral.html"><img src="ilorzal.png" alt="" class="img-fluid"></a>
-            </div>
-            <div class="card-body">
-              <div class="card-category-box">
-                <div class="card-category">
-                  <h6 class="category">Iloral vision</h6>
-                </div>
-              </div>
-              <h3 class="card-title"><a href="iloral.html">Mon stage</a></h3>
-              <p class="card-description">
-                ILORAL VISION, société par actions simplifiée est en activité depuis 6 ans. 
-                Serge DRAI est président de l'entreprise ILORAL VISION.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card card-blog">
-            <div class="card-img">
-              <a href="pardess.html"><img src="pardess.png" alt="" class="img-fluid"></a>
-            </div>
-            <div class="card-body">
-              <div class="card-category-box">
-                <div class="card-category">
-                  <h6 class="category">Pardess</h6>
-                </div>
-              </div>
-              <h3 class="card-title"><a href="pardess.html">Mon alternance</a></h3>
-              <p class="card-description">
-                PARDESS, société active depuis 2017. 
-                C'est une société par actions simplifiée.
-                Mehir TOUBIAN, est président de la société PARDESS.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--/ Section Blog End /--> 
- 
 
   <!--/ Section Testimonials Star /-->
   <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
@@ -347,6 +286,70 @@
       </div>
     </div>
   </div>
+  
+  
+<!--/ Section Blog Star /-->
+  <section id="blog" class="blog-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box text-center">
+            <h3 class="title-a">
+              Experiences
+            </h3>
+            <p class="subtitle-a">
+              Vous trouverez ci-joint les missions effectuées durant mon stage ainsi que celles de mon alternace.
+            </p>
+            <div class="line-mf"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card card-blog">
+            <div class="card-img">
+              <a href="iloral.html"><img src="ilorzal.png" alt="" class="img-fluid"></a>
+            </div>
+            <div class="card-body">
+              <div class="card-category-box">
+                <div class="card-category">
+                  <h6 class="category">Iloral vision</h6>
+                </div>
+              </div>
+              <h3 class="card-title"><a href="iloral.html">Mon stage</a></h3>
+              <p class="card-description">
+                ILORAL VISION, société par actions simplifiées est en activité depuis 6 ans. 
+                Serge DRAI est président de l'entreprise ILORAL VISION.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card card-blog">
+            <div class="card-img">
+              <a href="pardess.html"><img src="pardess.png" alt="" class="img-fluid"></a>
+            </div>
+            <div class="card-body">
+              <div class="card-category-box">
+                <div class="card-category">
+                  <h6 class="category">Pardess</h6>
+                </div>
+              </div>
+              <h3 class="card-title"><a href="pardess.html">Mon alternance</a></h3>
+              <p class="card-description">
+                PARDESS, société active depuis 2017. 
+                C'est une société par actions simplifiées.
+                Mehir TOUBIAN, est président de la société PARDESS.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Section Blog End /--> 
+ 
+
 
   
   <!--/ Section Portfolio Star /-->
