--- a/iloral.html
+++ b/iloral.html
@@ -134,7 +134,7 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="#4">Rénovation compléte du site</a>
+                  <a href="#4">Rénovation complète du site Iloral Vision</a>
                 </li>
                 
                 <li>
@@ -199,7 +199,7 @@
                 <p> Le stage m’a permis de faire mes premiers pas dans le monde du travail. </p>
                 <li>
                   <a style="color: #74CDCE">Premier point</a>
-                  <p style="color: white"> Sur le plan technique, j’ai découvert tout un écosystème informatique. J’ai particulièrement apprécié d’y utiliser de nouveaux logiciel notamment WordPress. Mais j'ai aussi dû faire face à différentes difficultés qui représentent aujourd’hui autant d’enseignements très importants pour moi, notamment : - l’enjeu du cahier des charges
+                  <p style="color: white"> Sur le plan technique, j’ai découvert tout un écosystème informatique. J’ai particulièrement appréciée d’y utiliser des nouveaux logiciels notamment WordPress. Mais j'ai aussi dû faire face à différentes difficultés qui représentent aujourd’hui autant d’enseignements très importants pour moi, notamment : - l’enjeu du cahier des charges
 -le rôle déterminant du chef du projet. </p>
                 </li>
                 <li>
